<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:padding="@dimen/margin_regular"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView_userFullNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/user_detail_name"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/textView_publicReposLabel"
        app:layout_constraintEnd_toStartOf="@id/textView_userFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textView_userFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/textView_publicRepos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_userFullNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="Some fancy bio" />

    <TextView
        android:id="@+id/textView_publicReposLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/user_detail_public_repos"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/textView_publicGistsLabel"
        app:layout_constraintEnd_toStartOf="@id/textView_publicRepos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_userFullNameLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textView_publicRepos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/textView_publicGists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_publicReposLabel"
        app:layout_constraintTop_toBottomOf="@id/textView_userFullName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="3" />

    <TextView
        android:id="@+id/textView_publicGistsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/user_detail_public_gists"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/textView_followersLabel"
        app:layout_constraintEnd_toStartOf="@id/textView_publicGists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_publicReposLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textView_publicGists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/textView_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_publicGistsLabel"
        app:layout_constraintTop_toBottomOf="@id/textView_publicRepos"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="1" />

    <TextView
        android:id="@+id/textView_followersLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/user_detail_followers"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/textView_followingLabel"
        app:layout_constraintEnd_toStartOf="@id/textView_followers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_publicGistsLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textView_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/textView_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_followersLabel"
        app:layout_constraintTop_toBottomOf="@id/textView_publicGists"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="3" />

    <TextView
        android:id="@+id/textView_followingLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_detail_following"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_followersLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/textView_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_followingLabel"
        app:layout_constraintTop_toBottomOf="@id/textView_followers"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        tools:text="3" />

</androidx.constraintlayout.widget.ConstraintLayout>
